# classicube-chat-bubbles-plugin

./: Cargo.toml  README.md  build.rs  flake.nix
.github/: renovate.json  semantic-release.json
.github/workflows/: build.yml  release.yml  rust.yml
src/: bubble_image_parts.rs  lib.rs  logger.rs  panic.rs
src/plugin/: mod.rs
src/plugin/events/: chat_input.rs  handle_local.rs  input_event_listener.rs  mod.rs
src/plugin/events/chat_input/: chat_screen.rs  mod.rs  options.rs  wordwrap.rs
src/plugin/events/chat_message/: chat_message_listener.rs  mod.rs
src/plugin/events/chat_messages/: mod.rs
src/plugin/events/input_event/: handle_local.rs  input_event_listener.rs  mod.rs
src/plugin/events/local_presence/: mod.rs  tests.rs  wordwrap.rs
src/plugin/events/player_chat_event/: emit_local.rs  listener.rs  local_handler.rs  mod.rs
src/plugin/networking/: message.rs  mod.rs
src/plugin/rendering/: mod.rs
src/plugin/rendering/bubble/: easing.rs  helpers.rs  inner.rs  mod.rs  tests.rs
src/plugin/rendering/context/: mod.rs  vertex_buffer.rs
src/plugin/rendering/render_hook/: mod.rs  renderable.rs  renderer.rs
