[package]
name = "classicube-chat-bubbles-plugin"
version = "0.5.2"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
backtrace = "=0.3.76"
bincode = "=3.0.0"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-relay = { git = "https://github.com/SpiralP/rust-classicube-relay.git" }
classicube-sys = "=5.0.0"
futures = "=0.3.32"
serde = { version = "=1.0.228", features = ["derive"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
zstd = "=0.13.3"

[build-dependencies]
classicube-sys = "=5.0.0"
png = "=0.18.1"
