[package]
name = "classicube-chat-bubbles-plugin"
version = "0.6.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
backtrace = "=0.3.76"
bincode = "=1.3.3"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-relay = { git = "https://github.com/SpiralP/rust-classicube-relay.git" }
classicube-sys = "=5.0.0"
futures = "=0.3.32"
serde = { version = "=1.0.228", features = ["derive"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
zstd = "=0.11.2"

[build-dependencies]
classicube-sys = "=5.0.0"
png = "=0.17.16"
